opam-version: "2.0"
name: "tzbot"
authors: "Louis Roché <louis@louisroche.net>"
maintainer: "Louis Roché <louis@louisroche.net>"
homepage: "https://github.com/khady/tzbot"
synopsis: "Display timezone of slack users"
dev-repo: "git+ssh://git@github.com:khady/tzbot.git"
bug-reports: "https://github.com/khady/tzbot/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04"}
  "dune" {build & >= "1.1.0"}
  "slacko"
  "lwt"
  "cmdliner"
  "ppxlib"
  "core_kernel"
  "sexplib"
  "lwt_ppx"
  "tls"
]
version: "git"
