opam-version: "2.0"
name: "tzbot"
authors: "Louis Roché <louis@louisroche.net>"
maintainer: "Louis Roché <louis@louisroche.net>"
license: "AGPLv3+"
homepage: "https://github.com/khady/tzbot"
synopsis: "Display timezones of slack users"
dev-repo: "git+ssh://git@github.com:khady/tzbot.git"
bug-reports: "https://github.com/khady/tzbot/issues"
build: [
  ["dune" "subst"] { pinned }
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] { with-test }
]
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {build}
  "slacko" {>= "0.15"}
  "lwt"
  "cmdliner" {>= "1.1.0"}
  "core_kernel"
  "sexplib"
  "lwt_ppx"
  "tls"
  "ppx_deriving_yojson"
  "ppx_compare"
  "ocamlformat" { with-dev-setup }
]
version: "git"
